--- a/pom.xml
+++ b/pom.xml
@@ -1,60 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <artifactId>oas-api-validator</artifactId>
-    <groupId>oas.api.validator</groupId>
-    <version>2.8.4-SNAPSHOT</version>
+	<artifactId>oas-api-validator</artifactId>
+	<groupId>oas.api.validator</groupId>
+	<version>2.8.4-SNAPSHOT</version>
 
-    <description>
+	<description>
         OpenAPI / Swagger validator.
     </description>
 
 	<properties>
-        <source.encoding>UTF-8</source.encoding>
-        <hamcrest.version>2.1</hamcrest.version>
-        <junit.version>4.12</junit.version>
-        <atlassian.version>2.8.3</atlassian.version>
-        <spring.version>4.3.25.RELEASE</spring.version>
-        <slf4j.version>1.7.28</slf4j.version>
-    </properties>
+		<source.encoding>UTF-8</source.encoding>
+		<hamcrest.version>2.1</hamcrest.version>
+		<junit.version>4.12</junit.version>
+		<atlassian.version>2.8.3</atlassian.version>
+		<spring.version>4.3.25.RELEASE</spring.version>
+		<slf4j.version>1.7.28</slf4j.version>
+	</properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-    	<dependency>
-    	    <groupId>com.atlassian.oai</groupId>
-		    <artifactId>swagger-request-validator-core</artifactId>
-		    <version>${atlassian.version}</version>
-    	</dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest</artifactId>
-            <version>${hamcrest.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-		  <groupId>org.slf4j</groupId>
-		  <artifactId>slf4j-simple</artifactId>
-		  <version>${slf4j.version}</version>
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
-		    <groupId>commons-cli</groupId>
-		    <artifactId>commons-cli</artifactId>
-		    <version>1.4</version>
+			<groupId>com.atlassian.oai</groupId>
+			<artifactId>swagger-request-validator-core</artifactId>
+			<version>${atlassian.version}</version>
 		</dependency>
-		
-				
-    </dependencies>
-
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest</artifactId>
+			<version>${hamcrest.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.4</version>
+		</dependency>
+	</dependencies>
 </project>
