--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
 		<atlassian.version>2.8.3</atlassian.version>
 		<spring.version>4.3.25.RELEASE</spring.version>
 		<slf4j.version>1.7.28</slf4j.version>
+		<maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
 
 	<dependencies>
