upgrade junit version

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 defaultLevel=DEBUG
-validation.test.error=ERROR
-validation.test.warn=WARN
+validation.test.error=INFO
+validation.test.warn=INFO
 validation.test.info=INFO
 validation.test.ignore=IGNORE
